# hs-mandelbrot

./: .gitignore  README  README.md  mandel.cabal
src/: Main.hs  Mandel.hs  Mandelbrot.hs  Util.hs
src/Codec/Image/: PPM.hs
