Name:           Mandelbrot
Version:        0.2
Cabal-Version:  >= 1.2
License:        BSD3
Author:         Geoff Hulette
Synopsis:       Simple visualization of the Mandelbrot Set.
Build-Type:     Simple
  
Executable mandel
  Hs-Source-Dirs: src
  Main-Is:        Main.hs
  Build-Depends:  base >= 4, JuicyPixels >= 3.1.5.2
  GHC-Options:    -O2 -Wall
